--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -152,6 +152,9 @@ $token-colors: blue, green, orange, yellow, white, purple;
 				opacity: 0.1;
 				transition-duration: 0.5s;
 			}
+			.empty-area {
+				// background: rgba(white, 0.2);
+			}
 		}
 	}
 
