--- a/src/game/game.css
+++ b/src/game/game.css
@@ -13,7 +13,7 @@
   color: white;
   display: grid;
   grid-template-rows: 1fr 150px;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 3fr 300px;
 }
 #game #board {
   grid-column: 1/3;
@@ -151,25 +151,37 @@
   width: 100%;
 }
 #game #players .player-card {
-  overflow: hidden;
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: 20px 0 0 20px;
-  margin: 5px;
+  position: relative;
+  margin: 20px;
   margin-right: 0;
-  color: white;
-  display: grid;
-  grid-template-columns: 100px auto;
+  width: 100%;
+  height: 120px;
 }
 #game #players .player-card svg {
   fill: white;
-  width: 10px;
+  width: 1em;
 }
-#game #players .player-card.current {
+#game #players .player-card .profile-pic {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+#game #players .player-card.current .profile-pic {
   border: solid 3px yellow;
-  border-right: none;
 }
 #game #players .player-card .player-details {
+  color: white;
+  background: #48806d;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  height: 100px;
   padding: 5px;
+  padding-left: 100px;
+  border-bottom-left-radius: 20px;
 }
 #game #players .player-card .bet-grid {
   display: grid;
@@ -195,7 +207,7 @@
 #game #board .cell {
   width: 120px;
   height: 120px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(192, 158, 108, 0.5);
   border-radius: 3px;
   margin: 3px;
   position: relative;
