--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -1,3 +1,5 @@
+@import "../global";
+
 $cellwidth: 120px;
 $cellheight: 120px;
 $cellmargin: 3px;
@@ -26,7 +28,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 	// grid
 	display: grid;
 	grid-template-rows: 1fr 150px;
-	grid-template-columns: 3fr 1fr;
+	grid-template-columns: 3fr 300px;
 
 	#board {
 		grid-column: 1/3
@@ -189,27 +191,39 @@ $token-colors: blue, green, orange, yellow, white, purple;
 		}
 
 		.player-card {
-			overflow: hidden;
-			background: rgba(white, 0.3);
-			border-radius: 20px 0 0 20px;
-			margin: 5px;
+			position: relative;
+			margin: 20px;
 			margin-right: 0;
-			color: white;
+			width: 100%;
+			height: 120px;
 			svg {
 				fill: white;
-				width: 10px;
+				width: 1em;
 			}
-			// grid
-			display: grid;
-			grid-template-columns: 100px auto;
 
-			&.current {
+			.profile-pic {
+				position: absolute;
+				width: 100px;
+				height: 100px;
+				border-radius: 20px;
+				overflow: hidden;
+				box-shadow: 5px 5px 10px rgba(black, 0.2);
+			}
+
+			&.current .profile-pic {
 				border: solid 3px yellow;
-				border-right: none;
 			}
 
 			.player-details {
+				color: white;
+				background: scale-color($color-3, $lightness: 0%);
+				position: absolute;
+				top: 20px;
+				left: 20px;
+				height: 100px;
 				padding: 5px;
+				padding-left: 100px;
+				border-bottom-left-radius: 20px;
 			}
 
 			.bet-grid {
@@ -242,7 +256,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 		.cell {
 			width: $cellwidth;
 			height: $cellheight;
-			background-color: rgba(255, 255, 255, 0.8);
+			background-color: rgba($color-2, 0.5); //rgba(255, 255, 255, 0.8);
 			border-radius: 3px;
 			margin: $cellmargin;
 			position: relative;
