--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -102,10 +102,16 @@ $token-colors: blue, green, orange, yellow, white, purple;
 	}
 
 	.card-shape {
+		margin: 10px;
 		font-size: 1.5rem;
 		width: 100px;
 		height: 140px;
 		border-radius: 10px;
+	}
+
+	.card-shape-small {
+		@extend .card-shape;
+		height: 50px;
 	}
 
 	.card-standard {
@@ -192,13 +198,23 @@ $token-colors: blue, green, orange, yellow, white, purple;
 
 		.player-card {
 			position: relative;
-			margin: 20px;
-			margin-right: 0;
-			width: 260px;
-			height: 120px;
+			margin: 20px 0;
+			width: 280px;
+			height: 130px;
 			svg {
 				fill: white;
 				width: 1em;
+			}
+
+			.smallbet-stack {
+				position: absolute;
+				top: -10px;
+				right: 0;
+
+				.betcard {
+					position: absolute;
+					top: 0;
+				}
 			}
 
 			.profile-pic {
@@ -220,7 +236,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 				position: absolute;
 				top: 20px;
 				left: 20px;
-				height: 100px;
+				height: 110px;
 				padding: 5px;
 				padding-left: 100px;
 				border-bottom-left-radius: 20px;
