--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -102,7 +102,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 	}
 
 	.card-shape {
-		margin: 10px;
+		// margin: 10px;
 		font-size: 1.5rem;
 		width: 100px;
 		height: 140px;
