--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -115,6 +115,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 	}
 
 	.card-standard {
+		margin: 10px;
 		border: solid 5px white;
 		background: black;
 		box-shadow: 1px 1px 3px rgba(black, 1);
