--- a/src/game/game.css
+++ b/src/game/game.css
@@ -61,8 +61,9 @@
     border-radius: 10px; }
   #game .card-shape-small {
     height: 50px; }
+  #game .margin-10px {
+    margin: 10px; }
   #game .card-standard {
-    margin: 10px;
     border: solid 5px white;
     background: black;
     box-shadow: 1px 1px 3px black;
